fixed header, body and main padding and clipping

--- a/src/main/resources/static/css/category.css
+++ b/src/main/resources/static/css/category.css
@@ -1,6 +1,5 @@
 
 .categories {
-    padding: 5% 2% 2% 2%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
