--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -30,14 +30,14 @@
 body {
     display: grid;
     min-height: 100svh;
-    grid-template-rows:  1fr auto;
+    grid-template-rows:  auto 1fr auto;
     background-color: var(---thirdBackground);
 }
 main {
     background-image: url('../images/background.webp');
     background-attachment: fixed;
     background-size: cover;
-    padding: 2% 10% 0 10%;
+    padding: 0 8% 0 8%;
     display: flex;
     flex-direction: column;
 }
@@ -73,7 +73,7 @@ h1, h2, h3, h4, p {
 }
 
 /*navbar*/
-header {
+.header {
     user-select: none;
     display: flex;
     flex-flow: row wrap;
@@ -85,16 +85,22 @@ header {
     width: 100%;
     position: fixed;
     z-index: 999;
-
 }
 
-header .navbar {
+.ghostHeader {
+    user-select: none;
+    display: flex;
+    background-color: transparent;
+    padding: 1rem;
+}
+
+.header .navbar {
     margin-bottom: 0.5em;
     display: flex;
     gap: 1rem;
 }
 
-header img.logo {
+.header img.logo {
     max-width: 100px;
     max-height: 100px;
 }
@@ -123,7 +129,7 @@ header img.logo {
     align-items: center;
     flex-direction: column;
     gap: 1rem;
-    padding: 2%;
+    padding: 3%;
     min-height: 60svh;
     background-color: var(---mainBackground);
     height: 100%;
@@ -166,26 +172,19 @@ footer p {
     transform: scale(var(---transform-scale));
 }
 
-@media (max-width: 1440px) {
-    .sections {
-        padding: 5%;
-    }
-}
-
 @media (max-width: 1024px) {
-    body {
-        grid-template-rows: auto 1fr auto;
-    }
-    header {
+
+    .header {
         position: revert;
         width: auto;
     }
 
+    .ghostHeader {
+        display: none;
+    }
+
     main {
         padding: 0 5% 0 5%;
-    }
-    .sections {
-        padding: 3%;
     }
 }
 
